fix: floating overflow

--- a/src/components/Floating.module.css
+++ b/src/components/Floating.module.css
@@ -3,7 +3,14 @@
   top: 20px;
   right: 20px;
   width: 300px;
-  height: fit-content;
+
+  /* TODO: maybe i should change box-sizing but im lazy */
+  max-width: calc(100vw - 40px - 2em);
+  max-height: calc(100vh - 40px - 2em);
+
+  overflow-y: scroll;
+  scrollbar-color: #5d007e #ffffff4c;
+  scrollbar-width: thin;
 
   border-radius: 10px;
   padding: 1em;
